SubVersion: $Id$

Run './configure --enable-static=yes --enable-shared=no' for use with 
ValGrind. Run 'valgrind --tool=memcheck --leak-check=yes ./test'

To do:
	- tifiles_is_varname_tokenized
	- tifiles_tokenize_varname

Log:

- 14/01/2006, version 0.0.4: roms
	- replaced assertion checks by warnings in the typesXX.c modules.
	- support UTF-8 filenames
	- added tifiles_file_is_tig function

- 15/09/2005, version 0.0.3: roms
	- fixed reading of TIB files.

- 14/09/2005, version 0.0.2: roms
	- file checksums
	- buffer overflow in tixx_translate functions
	- fixed build of docs/ (Tijl)
	- export missing macros.h

- 04/06/2005, version 0.0.1: roms
	- added transcode function to API for future implementation
	- removed 'name' field of VarEntry: make confusion
	- changed 'var_name' into name and 'fld_name' into 'folder'
	- added checksum verification

- 14/05/2005, version 0.0.1: roms
	- merged some types into a single type
	- common file handling API

- 10/04/2005, version 0.0.1: roms
	- rewritten TI8X+ FLASH support
	- fixed memory errors at:
		* test_tifiles_2.c:168
		* realloc in ti8x_file_read_flash
		* free in ti8x_content_free_flash
	- new valgrind check: no errors !

	Add TiGroup (*.tig) support which is a kind of file container.

- 26/03/2005, version 0.0.1: roms
	- error management left untouched
	- logging reworked (use glib)
	- a single public header with functions & defs, others are private
	- slightly fixed namespace sheme
	- use strong types such as TiCalcModel, ...
	- glib is used for logging (not very much for strings)
	- documentation system has been changed
	- functions pointers have been removed
	- library has been fully documented
	- decreased number of headers to include (1 or 3)
	- fixed tifiles_file_is_ti and argument passing to transcode functions
	- added fread_n_bytes adn fwrite_n_bytes which replaces fwrite_n_chars 
	- fixed many missing fclose() => file truncated...
	- fixed fsignature in TI8x support